Enable more CUDA architectures by default.

--- a/libstipple/CMakeLists.txt
+++ b/libstipple/CMakeLists.txt
@@ -19,7 +19,7 @@ set_source_files_properties(CUDA_SOURCE_FILES PROPERTIES LANGUAGE CUDA)
 # Define library target.
 add_library(${PROJECT_NAME} STATIC ${CXX_SOURCE_FILES} ${CXX_HEADER_FILES} ${CUDA_SOURCE_FILES} ${CUDA_HEADER_FILES})
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    CUDA_ARCHITECTURES "60;75" #"60;61;62;70;72;75;80;86"
+    CUDA_ARCHITECTURES "60;61;62;70;72;75;80;86"
     CUDA_SEPERABLE_COMPILATION ON
     CUDA_RESOLVE_DEVICE_SYMBOLS ON
     CUDA_STANDARD 17
